<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.intkhabahmed.moviemagic.models.Movie" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_space"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        app:cardElevation="@dimen/cardview_default_elevation"

        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/poster_iv"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:layout_marginTop="@dimen/medium_space"
                android:contentDescription="@string/movie_poster"
                android:imageUrl="@{movie.poster}"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginTop="@dimen/medium_space"
                android:layout_marginEnd="@dimen/medium_space"
                android:singleLine="true"
                android:text="@{movie.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster_iv"
                tools:text="Avengers: Age of Ultron" />

            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginTop="@dimen/medium_space"
                android:layout_marginEnd="@dimen/medium_space"
                android:ellipsize="end"
                android:maxLines="@integer/max_plot_lines"
                android:plot="@{movie.imdbID}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_icon_iv"
                tools:text="@tools:sample/lorem/random" />

            <ImageView
                android:id="@+id/release_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_space"
                android:contentDescription="@string/release_date_icon"
                app:layout_constraintStart_toStartOf="@+id/title_tv"
                app:layout_constraintTop_toBottomOf="@+id/title_tv"
                app:srcCompat="@drawable/ic_date_range_24dp" />

            <ImageView
                android:id="@+id/rating_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_space"
                android:contentDescription="@string/rating_icon"
                app:layout_constraintBottom_toTopOf="@+id/release_icon_iv"
                app:layout_constraintEnd_toStartOf="@+id/rating_tv"
                app:layout_constraintTop_toBottomOf="@+id/release_icon_iv"
                app:srcCompat="@drawable/ic_star_24dp" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:text="@{movie.year}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toTopOf="@+id/release_icon_iv"
                app:layout_constraintStart_toEndOf="@+id/release_icon_iv"
                app:layout_constraintTop_toBottomOf="@+id/release_icon_iv"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_space"
                android:rating="@{movie.imdbID}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBaseline_toBaselineOf="@+id/release_date_tv"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="10/10" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>